--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "qrcode": "^1.3.3"
+    "qrcode": "^1.3.3",
+    "vcards-js": "^2.10.0"
   }
 }
